test: 사업자null 테스트, hospitalDto record 변경